fix run packages

--- a/examples/pp2_config.json
+++ b/examples/pp2_config.json
@@ -4,6 +4,6 @@
     "state_dict_path": "./weights/TinyLlama-1.1B-Chat-v1.0.pth",
     "tensor_parallel": 1,
     "pipeline_parallel": 2,
-    "model_path": "~/Documents/TinyLlama-1.1B-Chat-v1.0",
+    "model_path": "/Users/lujianghu/Documents/TinyLlama-1.1B-Chat-v1.0",
     "layer_state_dict_dir": "./weights"
 }
