--- a/examples/rpc_pp2_llama3_config.json
+++ b/examples/rpc_pp2_llama3_config.json
@@ -3,9 +3,9 @@
     "bak2_pipeline_parallel_url_list": ["localhost:50051", "192.168.18.166:50052"],
     "bak3_pipeline_parallel_url_list": ["localhost:50051", "100.79.209.18:50052"],
     "tensor_parallel_url_list": [""],
-    "state_dict_path": "./weights/llama3-8b/other.pth",
+    "state_dict_path": "./np_weights/tiny-llama/other.npy",
     "tensor_parallel": 1,
     "pipeline_parallel": 2,
-    "model_path": "/Users/lujianghu/Documents/Meta-Llama-3-8B-Instruct",
-    "layer_state_dict_dir": "./weights/llama3-8b"
+    "model_path": "/Users/lujianghu/Documents/TinyLlama-1.1B-Chat-v1.0",
+    "layer_state_dict_dir": "./np_weights/tiny-llama"
 }
