--- a/examples/rpc_pp2_llama3_config.json
+++ b/examples/rpc_pp2_llama3_config.json
@@ -1,11 +1,15 @@
 {
-    "pipeline_parallel_url_list": ["localhost:50051", "localhost:50052"],
+    "pipeline_parallel_url_list": ["192.168.18.166:50051", "localhost:50053", "192.168.18.145:50052"],
     "bak2_pipeline_parallel_url_list": ["localhost:50051", "192.168.18.166:50052"],
     "bak3_pipeline_parallel_url_list": ["localhost:50051", "100.79.209.18:50052"],
+    "layer_start_end_list": [[0, 18], [18, 28], [28, 32]],
     "tensor_parallel_url_list": [""],
-    "state_dict_path": "./np_weights/tiny-llama/other.npy",
     "tensor_parallel": 1,
-    "pipeline_parallel": 2,
-    "model_path": "/Users/lujianghu/Documents/TinyLlama-1.1B-Chat-v1.0",
-    "layer_state_dict_dir": "./np_weights/tiny-llama"
+    "pipeline_parallel": 3,
+    "model_path": "/Users/lujianghu/Documents/Meta-Llama-3-8B-Instruct",
+    "state_dict_path": "./np_weights/llama3-8b/other.npy",
+    "layer_state_dict_dir": "./np_weights/llama3-8b",
+    "bak_model_path": "/Users/lujianghu/Documents/TinyLlama-1.1B-Chat-v1.0",
+    "bak_state_dict_path": "./np_weights/tiny-llama/other.npy",
+    "bak_layer_state_dict_dir": "./np_weights/tiny-llama"
 }
