--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,3 +11,11 @@ exclude = '''
     | dist
 )/
 '''
+
+[tool.isort]
+profile = "black"  # 使用与 black 兼容的配置
+line_length = 120
+multi_line_output = 3
+include_trailing_comma = true
+combine_as_imports = true
+force_sort_within_sections = true
