--- a/examples/config.json
+++ b/examples/config.json
@@ -2,14 +2,14 @@
     {
         "pp_rank": 0,
         "url": "localhost:25001",
-        "tp_size": 1,
+        "tp_size": 2,
         "master_port": 29501,
         "layer_idx": [0, 11]
     },
     {
         "pp_rank": 1,
-        "url": "localhost:25002",
-        "tp_size": 1,
+        "url": "192.168.0.101:25002",
+        "tp_size": 2,
         "master_port": 29502,
         "layer_idx": [11, 22]
     }
