--- a/requirements.txt
+++ b/requirements.txt
@@ -1,10 +1,12 @@
-transformers>=4.41.2
+transformers==4.36.2
 torch
-grpcio
-grpcio-tools
-protobuf
+grpcio==1.66.2
+grpcio-tools==1.66.2
+protobuf==5.28.0
 requests
 fastapi
 tiktoken
 tqdm
 uvicorn
+accelerate
+sentencepiece
