update forward seq_len=1 batch

--- a/examples/config.json
+++ b/examples/config.json
@@ -8,7 +8,7 @@
     },
     {
         "pp_rank": 1,
-        "url": "localhost:25002",
+        "url": "192.168.0.101:25002",
         "tp_size": 2,
         "master_port": 29502,
         "layer_idx": [11, 22]
