--- a/examples/debug_config.json
+++ b/examples/debug_config.json
@@ -1,7 +1,7 @@
 [
     {
         "pp_rank": 0,
-        "url": "192.168.1.4:25001",
+        "url": "localhost:25001",
         "tp_size": 2,
         "master_port": 29501,
         "layer_idx": [0, 1]
