--- a/requirements-mlx.txt
+++ b/requirements-mlx.txt
@@ -11,6 +11,8 @@ websockets
 gradio==5.4.0
 grpcio==1.66.2
 lz4==4.3.3
+mlx==0.19.1
+mlx_lm==0.19.2
 protobuf==5.28.3
 pydantic==2.9.2
 transformers==4.46.0
